Fix number overflow on clusters and modal z index problems

--- a/frontend/src/styles/dashboard.scss
+++ b/frontend/src/styles/dashboard.scss
@@ -20,7 +20,7 @@ $link: rgb(19, 131, 206);
 
 .dashboard-menu-area {
     position: absolute;
-    z-index: 10000;
+    z-index: 1000;
 }
 
 .menu-toggle {
