--- a/frontend/src/styles/map.scss
+++ b/frontend/src/styles/map.scss
@@ -30,7 +30,7 @@
 
 .marker-cluster div span {
 	font-weight: bold;
-	font-size: 0.9rem;
+	font-size: 0.8rem;
 }
 
 .marker-cluster div {
